# python-project-83

./: .env  .gitignore  Makefile  README.md  build.sh  database.sql  pyproject.toml
page-analyzer/: app.py  utils.py
page-analyzer/templates/: index.html  url.html  urls.html
page_analyzer/: __init__.py  app.py  db.py  html_parser.py  url_analyzer.py  utils.py  validator.py
page_analyzer/templates/: 404_not_found.html  base.html  default.html  error_page.html  index.html  link_page.html  list_of_urls.html  page_header.html  urls.html
page_analyzer/templates/includes/: head.html  header.html
page_analyzer/templates/layout/: default.html
