[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
packages = [
  { include = "page_analyzer" },
]


[tool.poetry.dependencies]
python = "^3.10"
urllib3 = "1.26.15"
Flask = "^3.0.3"
gunicorn = "^22.0.0"
psycopg = "^3.1.18"
requests = "^2.31.0"
psycopg2-binary = "^2.9.9"
python-dotenv = "^1.0.1"
validators = "^0.28.1"
bs4 = "^0.0.2"
flake8 = "^7.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
